--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,14 @@
 include MANIFEST.in
 include README.md setup.py CHANGELOG LICENSE
 
-prune pyscf/lib/build pyscf/build
+global-exclude *.py[cod]
+prune pyscf/lib/build
 
-recursive-include pyscf *.dat *.so *.dylib
-recursive-exclude pyscf *.c *.h
+include pyscf/lib/*.so
+
+# macos dynamic libraries
+include pyscf/lib/*.dylib
+
+# source code
+prune pyscf/lib/build
+recursive-include pyscf/lib *.c *.h CMakeLists.txt
