Prepare the ci job to package PyPI release for linux wheel

--- a/pyscf/lib/CMakeLists.txt
+++ b/pyscf/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
-project (clib_pyscf_mcpdft)
+cmake_minimum_required (VERSION 3.5)
+project (pyscf_forge)
 
-cmake_minimum_required (VERSION 2.8.11)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE RELWITHDEBINFO)
@@ -31,6 +31,22 @@ if (BUILD_MARCH_NATIVE)
       set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-math-errno")
     endif()
   endif()
+
+  include (CheckCXXCompilerFlag)
+  # Compile to run of this machine
+  check_cxx_compiler_flag (-xHost HAS_XHOST)
+  check_cxx_compiler_flag (-march=native HAS_MARCH_NATIVE)
+  if (HAS_XHOST)
+      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -xHost")
+  elseif (HAS_MARCH_NATIVE)
+      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+  endif ()
+
+  # Do interparts optimization
+  check_cxx_compiler_flag (-ipo HAS_IPO)
+  if (HAS_IPO)
+      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ipo")
+  endif (HAS_IPO)
 else()
   if ("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
     include(CheckCCompilerFlag)
@@ -51,7 +67,8 @@ if (MKL)
 endif (MKL)
 #link_directories ($ENV{LD_LIBRARY_PATH})
 
-find_package (LAPACK REQUIRED)
+find_package(BLAS REQUIRED)
+#find_package (LAPACK REQUIRED)
 
 # OpenMP
 option(ENABLE_OPENMP "Compiling C extensions with openmp" ON)
@@ -64,27 +81,10 @@ if(ENABLE_OPENMP)
   endif()
 endif()
 
-include (CheckCXXCompilerFlag)
-
-# Compile to run of this machine
-check_cxx_compiler_flag (-xHost HAS_XHOST)
-check_cxx_compiler_flag (-march=native HAS_MARCH_NATIVE)
-if (HAS_XHOST)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -xHost")
-elseif (HAS_MARCH_NATIVE)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
-endif ()
-
-# Do interparts optimization
-check_cxx_compiler_flag (-ipo HAS_IPO)
-if (HAS_IPO)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ipo")
-endif (HAS_IPO)
-
 option(PYSCF_SOURCE_DIR "Pyscf source directory e.g. /usr/local/lib/python3.7/site-packages/pyscf")
 if(NOT PYSCF_SOURCE_DIR)
   execute_process(
-    COMMAND python -c "import pyscf; print(pyscf.__path__[0], end='')"
+    COMMAND python3 -c "import pyscf; print(pyscf.__path__[0], end='')"
     OUTPUT_VARIABLE PYSCF_SOURCE_DIR)
 endif()
 message(STATUS "Include pyscf source dir: ${PYSCF_SOURCE_DIR}")
@@ -115,7 +115,7 @@ endif ()
 set (PDFT_SOURCE_FILES "../mcpdft/nr_numint.c")
 add_library (clib_pdft SHARED ${PDFT_SOURCE_FILES})
 #FIXME: LD_LIBRARY_PATH
-target_link_libraries (clib_pdft dft ${LAPACK_LIBRARIES} ${OPENMP_C_PROPERTIES})
+target_link_libraries (clib_pdft dft ${BLAS_LIBRARIES} ${OPENMP_C_PROPERTIES})
 set_target_properties (clib_pdft PROPERTIES
     CLEAN_DIRECT_OUTPUT 1
     LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}
