add cffi dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,2 @@
 [build-system]
-requires = ["setuptools", "wheel", "cmake", "pyscf", "numpy"]
+requires = ["setuptools", "wheel", "cmake", "pyscf", "numpy", "cffi"]
