--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ jobs:
   release-pypi-x86-64:
     runs-on: ubuntu-latest
     env:
-      img: quay.io/pypa/manylinux2014_x86_64:2024-05-06-7d57077
+      img: quay.io/pypa/manylinux2014_x86_64:latest
     steps:
       - uses: actions/checkout@v4
       - name: Build wheels
@@ -44,7 +44,7 @@ jobs:
   release-pypi-aarch64:
     runs-on: ubuntu-latest
     env:
-      img: quay.io/pypa/manylinux2014_aarch64:2023-03-12-25fd859
+      img: quay.io/pypa/manylinux2014_aarch64:latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
