--- a/pyscf/lib/CMakeLists.txt
+++ b/pyscf/lib/CMakeLists.txt
@@ -124,7 +124,7 @@ set_target_properties (clib_pdft PROPERTIES
     OUTPUT_NAME "pdft")
 
 # Build the LibXC interface v2 library
-set (LIBXC_ITRF2_SOURCE_FILES "../dft/libxc_itrf2.c")
+set (LIBXC_ITRF2_SOURCE_FILES "dft/libxc_itrf2.c")
 add_library (clib_libxc_itrf2 SHARED ${LIBXC_ITRF2_SOURCE_FILES})
 target_link_libraries (clib_libxc_itrf2 xc ${OPENMP_C_PROPERTIES})
 set_target_properties (clib_libxc_itrf2 PROPERTIES
