--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,15 +31,11 @@ jobs:
         run: |
             ls ${{ github.workspace }}/linux-wheels
       - name: Publish to PyPI
-        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          #password: ${{ secrets.PYPI_TEST_API_TOKEN }}
-          #repository_url: https://test.pypi.org/legacy/
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          packages-dir: ${{ github.workspace }}/linux-wheels
-          verbose: true
+        run: |
+            pip3 install twine
+            export TWINE_USERNAME=__token__
+            export TWINE_PASSWORD="${{ secrets.PYPI_API_TOKEN }}"
+            twine upload --verbose linux-wheels/*
 
   release-pypi-aarch64:
     runs-on: ubuntu-latest
@@ -72,15 +68,11 @@ jobs:
       run: |
         ls ${{ github.workspace }}/linux-wheels
     - name: Publish to PyPI
-      # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        #password: ${{ secrets.PYPI_TEST_API_TOKEN }}
-        #repository_url: https://test.pypi.org/legacy/
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        packages-dir: ${{ github.workspace }}/linux-wheels
-        verbose: true
+      run: |
+          pip3 install twine
+          export TWINE_USERNAME=__token__
+          export TWINE_PASSWORD="${{ secrets.PYPI_API_TOKEN }}"
+          twine upload --verbose linux-wheels/*
 
   release-pypi-sdist:
     runs-on: ubuntu-latest
@@ -102,6 +94,12 @@ jobs:
           password: ${{ secrets.PYPI_API_TOKEN }}
           packages-dir: ${{ github.workspace }}/dist
           verbose: true
+      - name: Publish to PyPI
+        run: |
+            pip3 install twine
+            export TWINE_USERNAME=__token__
+            export TWINE_PASSWORD="${{ secrets.PYPI_API_TOKEN }}"
+            twine upload --verbose linux-wheels/*
 
 #  release-pypi-macos-x86:
 #    name: Build wheels for macos
