--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,11 +6,12 @@ jobs:
   flake:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.7
-      - uses: actions/checkout@v2
+          python-version: 3.9
       - name: Install flake8
         run: pip install "flake8>=3.7.0"
       - name: Static analysis
