try removing lapack dependencies

--- a/pyscf/lib/CMakeLists.txt
+++ b/pyscf/lib/CMakeLists.txt
@@ -68,7 +68,7 @@ endif (MKL)
 #link_directories ($ENV{LD_LIBRARY_PATH})
 
 find_package(BLAS REQUIRED)
-find_package (LAPACK REQUIRED)
+#find_package (LAPACK REQUIRED)
 
 # OpenMP
 option(ENABLE_OPENMP "Compiling C extensions with openmp" ON)
@@ -142,7 +142,6 @@ set_target_properties (clib_dsrg PROPERTIES
 # Build the CSFstring shared library
 set (CSF_SOURCE_FILES "csf/csfstring.c")
 add_library (clib_csf SHARED ${CSF_SOURCE_FILES})
-target_link_libraries (clib_csf ${LAPACK_LIBRARIES})
 set_target_properties (clib_csf PROPERTIES
     LINKER_LANGUAGE C
     CLEAN_DIRECT_OUTPUT 1
