compile CSF with openmp (oops!!!)

--- a/pyscf/lib/CMakeLists.txt
+++ b/pyscf/lib/CMakeLists.txt
@@ -142,6 +142,7 @@ set_target_properties (clib_dsrg PROPERTIES
 # Build the CSFstring shared library
 set (CSF_SOURCE_FILES "csf/csfstring.c")
 add_library (clib_csf SHARED ${CSF_SOURCE_FILES})
+target_link_libraries (clib_csf ${OPENMP_C_PROPERTIES})
 set_target_properties (clib_csf PROPERTIES
     LINKER_LANGUAGE C
     CLEAN_DIRECT_OUTPUT 1
